package NYtHnsw;

option optimize_for = SPEED;

import "mapreduce/yt/interface/protos/extension.proto";

message TEmbeddingPB {
    optional uint32 ShardId = 1 [(NYT.key_column_name) = "shard_id"];
    optional uint32 ItemId = 2 [(NYT.key_column_name) = "id"];
    optional fixed64 DocId = 3 [(NYT.column_name) = "doc_id"];
    optional bytes Item = 4 [(NYT.column_name) = "item"];
};

message TShardSizePB {
    optional uint32 ShardId = 1 [(NYT.key_column_name) = "shard_id"];
    optional uint32 Size = 2 [(NYT.column_name) = "size"];
}
